--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -20,7 +20,7 @@
       <%= f.input :p_title , label: 'Title Of Product' %>
       <%= f.input :p_image_title, label: 'Image_Title' %>
       <!-- <%= f.input :p_keyword, label: ', gadgets, amazon, recommended, promo code, coupon, under' %> -->
-      <%= f.input :p_hashtag, label: 'Hashtags' %>
+      <!-- <%= f.input :p_hashtag, label: 'Hashtags' %> -->
       <!-- <%= f.input :p_spare_06, label: 'Korean Title' %>   -->
     </div>
     <div class="pricing stk clearfix">
@@ -47,7 +47,7 @@
     </div>
     <div class="pricing clearfix">
       <%= f.input :p_promocode, input_html: { class: "promo_code" }, label: 'Promo Code' %>
-      <%= f.input :p_end_date, input_html: { class: "promo_date" }, label: 'End Date' %>
+      <!-- <%= f.input :p_end_date, input_html: { class: "promo_date" }, label: 'End Date' %> -->
     </div>
     <!-- <%= f.input :p_spare_50, label: 'Expired Date' %><br /> -->
     <!-- <%= f.input :p_spare_51, label: 'Ends Today' %><br /> -->
