--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -20,7 +20,7 @@
       <%= f.input :p_title , label: 'Title Of Product' %>
       <%= f.input :p_image_title, label: 'Image_Title' %>
       <!-- <%= f.input :p_keyword, label: ', gadgets, amazon, recommended, promo code, coupon, under' %> -->
-      <!-- <%= f.input :p_hashtag, label: 'Hashtags' %> -->
+      <%= f.input :p_hashtag, label: 'Hashtags' %>
       <!-- <%= f.input :p_spare_06, label: 'Korean Title' %>   -->
     </div>
     <div class="pricing stk clearfix">
