--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -65,7 +65,7 @@
       </div> -->
   
 
-      <% if can? :update, @messages %>
+      <!--<% if can? :update, @messages %>
         <div class="message">
           <h2>Check your messages from customers</h2>  
           <table>
@@ -87,7 +87,7 @@
           
         </div>
       <% end %>
-    </div>
+    </div>-->
 
   </div>
 </div>
