--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,9 +1,9 @@
-<div class="layout"><!--layout-->
+<!--<div class="layout">
   <div class="wrap">
-    <!-- <div class="contact_form">
+    <div class="contact_form">
       <h1>Contact Us</h1>
       <p>Get a question? Get in touch with us!</p>
       <%= render 'form' %>
-    </div> -->
+    </div>
   </div>
-</div>
+</div> -->
