--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,4 +1,4 @@
-<div class="layout"><!--layout-->
+<!--<div class="layout">
   <div class="wrap">
   <%= render 'shared/header_short' %>
 
@@ -26,4 +26,4 @@
     <% end %>
 
   </div>
-</div>
+</div>-->
