--- a/app/views/bargains/show.html.erb
+++ b/app/views/bargains/show.html.erb
@@ -32,6 +32,7 @@
                 <p>Available On Amazon Now</p>
                 <p><%= @bargain.bar_title %></p>
                 <p><%= @bargain.bar_detail %></p>
+                <p>#amazondeals #amazoncoupons</p>
                 <p>http://ohigottabuythis.net/bargains/<%=(params[:id]) %></p>
               </div>
             </div>
