--- a/app/views/promocodes/_usa_kor.html.erb
+++ b/app/views/promocodes/_usa_kor.html.erb
@@ -3,11 +3,16 @@
 
  <% running_total = 0 %>
  <% running_total =  @promocode.p_spare_26 - (@promocode.p_spare_27 / 100) * @promocode.p_spare_26 %>
- <% running_save = @promocode.p_spare_26 - @promocode.p_spare_27 %>
+ <% running_save = @promocode.p_spare_26 - running_total %>
  <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01"><%= number_to_currency(@promocode.p_spare_26) %></span><span class="span_02">( <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> OFF ) </span></p>
  <div class="add_line">
   <ul>
-    <li>Take <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> at <%= number_to_currency(@promocode.p_spare_26) %> via code and save <%= number_to_currency(running_save) %></li>
+    <% if @promocode.p_spare_55.present? || @promocode.p_spare_56.present? %>
+      <li>Take <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> at <%= number_to_currency(@promocode.p_spare_26) %> via code</li>
+    <% else %>
+      <li>Take <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> at <%= number_to_currency(@promocode.p_spare_26) %> via code and save <%= number_to_currency(running_save) %></li>
+    <% end %>
+    
     <% if @promocode.p_spare_55.present? || @promocode.p_spare_56.present? %>
       <% if @promocode.p_spare_55.present? %>
         <li>+ extra <%= number_to_percentage(@promocode.p_spare_55, precision: 0) %> off coupon</li>
