--- a/app/views/deals/_header_index.html.erb
+++ b/app/views/deals/_header_index.html.erb
@@ -5,7 +5,7 @@
       <ul class="clearfix">
         <li class="coumos1"><a class="active" href="/deals/quicksearch">Amazon Deal Finder</a></li>
         <li><a href="/bargains">Featured Deals</a></li>
-        <li><a href="/hotdeals">Today's Discovery</a></li>
+        <li><a href="/promocodes">Today's Discovery</a></li>
         <li class="todays_deal"><a target="_blank" href="https://amzn.to/2Q8uWyX">Deal of the Day</a></li>
         <li class="todays_deal"><a target="_blank" href="https://amzn.to/2IsIyRw">Lightning Deals</a></li>
       </ul>
