--- a/app/views/promocodes/_navbar.html.erb
+++ b/app/views/promocodes/_navbar.html.erb
@@ -4,10 +4,11 @@
        <li><a href="/deals/quicksearch">Amazon Deal Finder</a></li>
        <li><a href="/bargains">Featured Deals</a></li>
        <li>
-          <a class="active" href="/hotdeals">Today's Discovery</a>
+          <a class="active" href="/promocodes">Today's Discovery</a>
           <ul class="down_sub clearfix">
-            <li><a href="/hotdeals">Deals</a></li>
             <li><a class="active" href="/promocodes">Coupons</a></li>
+            <li><a href="/hotdeals">Deals</a></li>
+            
           </ul>
         </li>
        <li class="todays_deal"><a target="_blank" href="https://amzn.to/2Q8uWyX">Deal of the Day</a></li>
