--- a/app/views/shared/_hotpro_header.html.erb
+++ b/app/views/shared/_hotpro_header.html.erb
@@ -6,10 +6,10 @@
        <li><a href="/deals/quicksearch">Amazon Deal Finder</a></li>
        <li><a href="/bargains">Featured Deals</a></li>
        <li>
-          <a class="active" href="/hotdeals">Today's Discovery</a>
+          <a class="active" href="/promocodes">Today's Discovery</a>
           <ul class="down_sub clearfix">
-            <li><a  class="active"href="/hotdeals">Deals</a></li>
-            <li><a href="/promocodes">Coupons</a></li>
+            <li><a class="active" href="/promocodes">Coupons</a></li>
+            <li><ahref="/hotdeals">Deals</a></li>
           </ul>
         </li>
        <!-- <li><a href="/hotdeals">Deals</a></li> -->
