--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -54,7 +54,7 @@
                   </span>
                   <!-- <span class="span_02"> | <%= number_to_percentage(running_total, precision: 0) %> OFF ) </span> --> 
                 </p>
-                <p>#AmazonDeals #HotDeals #ohigottabuythis <%= @hotdeal.h_spare_05 %></p>
+                <p>#AmazonDeals #HotDeals</p>
                 <p>http://ohigottabuythis.net/hotdeals/<%=(params[:id]) %></p>
               </div>
             </div>
