--- a/app/views/shared/_new_header.html.erb
+++ b/app/views/shared/_new_header.html.erb
@@ -19,8 +19,8 @@
         
         <div class="nav-wrapper">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/deals/quicksearch">Bargain</a></li>
+            <li><a href="/">Bargain</a></li>
+            <li><a href="gadgets">Gadgets</a></li>
             <!-- <li><a href="/gadgets">Gadgets</a></li> -->
             <li><a href="/recommends">Featured</a></li>
           </ul>
