--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -53,6 +53,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .line_three{width:31.33%;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .tax_box{float:left;width:23%;margin:1%;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .total_box{width:98%;margin:1%;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .total_box p.you-save{font-size:17px;color:#fff;background:#08f;width:40%;margin:0 auto;border-radius:10px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box p{font-size:12px;margin:5px;color:#6d6e71;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box p span{border:1px solid #6a6a6a;border-radius:100px;padding:0 5px;margin-right:3px;display:none;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box p a{color:#6d6e71;}
@@ -68,7 +69,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box{margin-bottom:10px;border:1px dashed #ccc;border-left:0;border-right:0;padding:3px 0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span{display:block;font-size:12px;color:#a6a6a6;margin-left:15px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span ul{margin-left:10px;}
-.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span ul li{list-style:disc;color:#616161;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span ul li{list-style:disc;color:#616161;margin-bottom:5px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span i:before{content: "\f08e";font-family: FontAwesome;font-style: normal;margin-left:3px;color:#08f;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .hidden_box{display:none;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap ul.tokor{margin-top:10px;padding:0;}
