--- a/app/views/promocodes/_usa_kor.html.erb
+++ b/app/views/promocodes/_usa_kor.html.erb
@@ -82,7 +82,7 @@
               <% estimated_us = 0 %>
               <% estimated_us = running_total - @promocode.p_spare_56 %>
               <em class="total_p"><%= number_to_currency(estimated_us) %></em>
-              <% you_save = @promocode.p_spare_26.to_i - estimated_us %>
+              <% you_save = @promocode.p_spare_26.to_i - estimated_us.to_i %>
               <p class="you-save">You've saved <%= number_to_currency(you_save) %></p>
             <% end %>
           </div>
@@ -90,7 +90,7 @@
         <% else %>
           <div class="box total_box">
             <p>Estimated Purchase Price</p>
-            <% you_save = @promocode.p_spare_26.to_i - running_total %>
+            <% you_save = @promocode.p_spare_26.to_i - running_total.to_i %>
             <em class="total_p"><%= number_to_currency(running_total) %></em>
             <p class="you-save">You've saved <%= number_to_currency(you_save) %></p>
           </div>
