--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -17,7 +17,11 @@
         <div class="show_img hotdeal_img">
           <div class="img_box deal_img_box">
             <% if @hotdeal.h_image.present? %>
-              <a target="_blank" href="<%= @hotdeal.h_link %>"><img src="<%= @hotdeal.h_image %>" alt="<%= @hotdeal.h_title %>" title="<%= @hotdeal.h_spare_04 %>"></a>
+              <% if @hotdeal.h_spare_04.present? %>
+                <a target="_blank" href="<%= @hotdeal.h_link %>"><img src="<%= @hotdeal.h_image %>" alt="<%= @hotdeal.h_title %>" title="<%= @hotdeal.h_spare_04 %>"></a>
+              <% else %>
+                <a target="_blank" href="<%= @hotdeal.h_link %>"><img src="<%= @hotdeal.h_image %>" alt="<%= @hotdeal.h_title %>" title="<%= @hotdeal.h_title %>"></a>
+              <% end %>
             <% else %>
               <%= link_to (image_tag @hotdeal.himage.url(:small), alt: @hotdeal.h_title, title: @hotdeal.h_spare_04), @hotdeal %>
             <% end %>
@@ -87,7 +91,11 @@
         amzn_assoc_ad_type = "smart";
         amzn_assoc_marketplace = "amazon";
         amzn_assoc_region = "US";
-        amzn_assoc_default_search_phrase = "<%= @hotdeal.h_spare_04 %>";
+        <% if @hotdeal.h_spare_04.present? %>
+          amzn_assoc_default_search_phrase = "<%= @hotdeal.h_spare_04 %>";
+        <% else %>
+          amzn_assoc_default_search_phrase = "<%= @hotdeal.h_title %>";
+        <% end %>
         amzn_assoc_default_category = "All";
         amzn_assoc_linkid = "10a626d082cd5d1d67d4b8a2afc6ae3d";
         amzn_assoc_title = "Shop Related Products";
