--- a/app/views/recommends/_form.html.erb
+++ b/app/views/recommends/_form.html.erb
@@ -8,9 +8,10 @@
             <%= f.input :re_filter, label: "[gadgets, geeky, home&kitchen, fashion, travel]"%>
             <%= f.input :re_image, label: 'Cover Iamge' %>
             <%= f.input :re_title, label: 'Cover Title' %>
-            <%= f.input :sub_number_01, label: "Post Date [ex. OCT 30, 2019 ] "%>
-            <%= f.input :re_intro, label: 'Main Intro' %>
-            <%= f.input :sub_intro, as: :trix_editor, label: 'Sub Intro' %>
+            <%= f.input :sub_youtube_01, label: 'hashtag Link' %>
+            <!-- <%= f.input :sub_number_01, label: "Post Date [ex. OCT 30, 2019 ] "%> -->
+            <!-- <%= f.input :re_intro, label: 'Main Intro' %> -->
+            <!-- <%= f.input :sub_intro, as: :trix_editor, label: 'Sub Intro' %> -->
           </div>
           <div class="input_image">
           </div>
@@ -27,7 +28,7 @@
             <%= f.input :sub_price_01, label: 'Current Price' %>
             <%= f.input :sub_source_01, label: 'Source' %>
             <%= f.input :sub_intro_01, as: :trix_editor %>
-            <%= f.input :sub_youtube_01, label: 'Image URL' %>
+            <!-- <%= f.input :sub_youtube_01, label: 'Image URL' %> -->
             <%= f.button :submit %>
           </div>
           <div class="input_box">
@@ -41,7 +42,7 @@
             <%= f.input :sub_source_02, label: 'Source' %>
             <%= f.input :sub_intro_02, as: :trix_editor %>
             
-            <%= f.input :sub_youtube_02 %>
+            <!-- <%= f.input :sub_youtube_02 %> -->
             <%= f.button :submit %>
           </div>
           <div class="input_box">
@@ -55,7 +56,7 @@
             <%= f.input :sub_source_03, label: 'Source' %>
             <%= f.input :sub_intro_03, as: :trix_editor %>
             
-            <%= f.input :sub_youtube_03 %>
+            <!-- <%= f.input :sub_youtube_03 %> -->
             <%= f.button :submit %>
           </div>
           <div class="input_box">
@@ -68,7 +69,7 @@
             <%= f.input :sub_price_04, label: 'Current Price' %>
             <%= f.input :sub_source_04, label: 'Source' %>
             <%= f.input :sub_intro_04, as: :trix_editor %>
-            <%= f.input :sub_youtube_04 %>
+            <!-- <%= f.input :sub_youtube_04 %> -->
             <%= f.button :submit %>
           </div>
           <div class="input_box">
@@ -81,7 +82,7 @@
             <%= f.input :sub_price_05, label: 'Current Price' %>
             <%= f.input :sub_source_05, label: 'Source' %>
             <%= f.input :sub_intro_05, as: :trix_editor %>            
-            <%= f.input :sub_youtube_05 %>
+            <!-- <%= f.input :sub_youtube_05 %> -->
             <%= f.button :submit %>
           </div>
         </div>
@@ -97,7 +98,7 @@
             <%= f.input :sub_price_06, label: 'Current Price' %>
             <%= f.input :sub_source_06, label: 'Source' %>
             <%= f.input :sub_intro_06, as: :trix_editor %>
-            <%= f.input :sub_youtube_06 %>
+            <!-- <%= f.input :sub_youtube_06 %> -->
             <%= f.button :submit %>
           </div>
           <div class="input_box">
@@ -110,7 +111,7 @@
             <%= f.input :sub_price_07, label: 'Current Price' %>
             <%= f.input :sub_source_07, label: 'Source' %>
             <%= f.input :sub_intro_07, as: :trix_editor %>
-            <%= f.input :sub_youtube_07 %>
+            <!-- <%= f.input :sub_youtube_07 %> -->
             <%= f.button :submit %>
           </div>
           <div class="input_box">
@@ -123,7 +124,7 @@
             <%= f.input :sub_price_08, label: 'Current Price' %>
             <%= f.input :sub_source_08, label: 'Source' %>
             <%= f.input :sub_intro_08, as: :trix_editor %>
-            <%= f.input :sub_youtube_08 %>
+            <!-- <%= f.input :sub_youtube_08 %> -->
             <%= f.button :submit %>
           </div>
           <div class="input_box">
@@ -136,7 +137,7 @@
             <%= f.input :sub_price_09, label: 'Current Price' %>
             <%= f.input :sub_source_09, label: 'Source' %>
             <%= f.input :sub_intro_09, as: :trix_editor %>
-            <%= f.input :sub_youtube_09 %>
+            <!-- <%= f.input :sub_youtube_09 %> -->
             <%= f.button :submit %>
           </div>
           <div class="input_box">
@@ -149,7 +150,7 @@
             <%= f.input :sub_price_10, label: 'Current Price' %>
             <%= f.input :sub_source_10, label: 'Source' %>
             <%= f.input :sub_intro_10, as: :trix_editor %>
-            <%= f.input :sub_youtube_10 %>
+            <!-- <%= f.input :sub_youtube_10 %> -->
             <%= f.button :submit %>
           </div>
         </div>
