--- a/app/views/recommends/_navbar.html.erb
+++ b/app/views/recommends/_navbar.html.erb
@@ -4,11 +4,12 @@
   <div class="sm_pc">
    <div class="filter-search guide_controll">
       <li><button class="filter-button btn btn-md btn-primary top_10" data-filter="*">All</button></li>
-      <li><button class="filter-button btn btn-md white-text top_10" data-filter="gadgets">Gadgets</button></li>
-      <li><button class="filter-button btn btn-md white-text top_10" data-filter="geeky">Geeky</button></li>
-      <li><button class="filter-button btn btn-md white-text top_10" data-filter="fashion">Fashion</button></li>
-      <li><button class="filter-button btn btn-md white-text top_10" data-filter="travel">Travel</button></li>
+      <li><button class="filter-button btn btn-md white-text top_10" data-filter="electronics">Electronics</button></li>
       <li><button class="filter-button btn btn-md top_10" data-filter="home&kitchen">Home&Kitchen</button></li>
+      <li><button class="filter-button btn btn-md white-text top_10" data-filter="fashion">Fashion</button></li>
+      <li><button class="filter-button btn btn-md white-text top_10" data-filter="outdoor">Outdoor</button></li>
+      <li><button class="filter-button btn btn-md white-text top_10" data-filter="geeky">Geeky</button></li>
+      
       <input type="text" class="form-control" placeholder="Search gift you want to">
     </div>
   </div>
