--- a/app/views/recommends/index.html.erb
+++ b/app/views/recommends/index.html.erb
@@ -3,7 +3,8 @@
   
     <div class="cu_sub_nav">
       <ul class="clearfix">
-        <li><a class="active" href="/recommends">Editor's Pick TOP 10</a></li>
+        <li><a class="active" href="/recommends">Find More Best Deals</a></li>
+        <!-- <li><a class="active" href="/recommends">Editor's Pick TOP 10</a></li> -->
         <!-- <li><a href="/guides/index">Gift Guide</a></li> -->
         <!-- <li><a href="/editors/index">Editor's Pick</a></li> -->
         <!-- <li><a href="/blogs/index">Blog</a></li> -->
