--- a/app/views/shared/_header_amazon.html.erb
+++ b/app/views/shared/_header_amazon.html.erb
@@ -1,6 +1,6 @@
 <div class="deals_main_menu clearfix">
   <ul>
-    <li class="nth_1 active"><a class="active" href="/deals/quicksearch">All About Amazon</a></li>
+    <li class="nth_1 active"><a class="active" href="/promocodes">All About Amazon</a></li>
     <li><a href="/deals/storesales"><span>Stores</span></a></li>
   </ul>    
 </div>
