--- a/app/views/promocodes/_usa_kor.html.erb
+++ b/app/views/promocodes/_usa_kor.html.erb
@@ -106,7 +106,7 @@
            <% if @promocode.p_spare_26 < 25.00 %>         
             <li>Get free shipping when you order $25+ of eligible items or Amazon Prime Members. <a target="_blank" href="/blogs/blog_01_amz_prime">What's Prime.<i></i></a></li>
             <% end %>
-            <li>Average ratings and reviews may change after posting.</li>
+            <li>Pricing, verage ratings and reviews may change after posting.</li>
           </ul>
         </span>
       </div>
