--- a/app/views/hotdeals/_usa_kor.html.erb
+++ b/app/views/hotdeals/_usa_kor.html.erb
@@ -196,7 +196,7 @@
             <% if @hotdeal.h_spare_44 < 25.00 %>
               <li>Get free shipping when you order $25+ of eligible items or Amazon Prime Members. <a target="_blank" href="/blogs/blog_01_amz_prime">What's Prime.<i></i></a></li>
             <% end %>
-          <li>Average ratings and reviews may change after posting.</li>
+          <li>Pricing, average ratings and reviews may change after posting.</li>
           </ul>
         </span>
       </div>
